# Scale-pixel-to-cm

./: .gitignore  README.md  erreur_grume.py  install.txt  modif_rapport  note_CNN
compute_scale/: clean.sh  segment_mesure.java  writeScale.sh
compute_scale/SCALE/: echelle_computed_horizontal.txt  echelle_computed_moyenne.txt  echelle_computed_vertical.txt
compute_scale/pixel_Hough/: Hough_repo.m  afficheur.m  bounding_box.m  bresenham.m  chaincode.m  check_sgm.m  clearHoughVecteur.m  densite.m  main.m  (+8 more)
compute_scale/segment_flou/src/: CMakeLists.txt  Droites.cpp  Droites.hpp  Mire.cpp  Mire.hpp  main.cpp  makeAllsgm.sh  makeSgmFlou.cpp
deeplearning/: copySet.sh  data.py  image  image.py  model.py  predict.py  resize.py  run.py  selectImages.sh  view.py
grume/mesure_grume/src/: CMakeLists.txt  main.cpp  measures_contour.cpp  measures_contour.h  measures_region.cpp  measures_region.h  orthogonalAxis.cpp  orthogonalAxis.h
litterature/: site_article.txt
outils/: CMakeLists.txt  comparator.py  erreur_echelle_mire.py  erreur_grume.py  mesure_SgmModele.py  prop.py  resize.py  testBoost  test_DGtal.cpp
segmentation_mire/: Hough_repo.m  Otsu_repo.m  affichage_harris.m  affiche_composante.m  afficheur.m  apply_Otsu.m  bounding_box.m  canny_masked_repo.m  canny_repo.m  create_composante.m  densite.m  densiteAnnalyse.m  detect_contour.m  hello_wolrd.m  histo_moy.m  hough_bin_pixels.m  mask_repo.m  rgb2cmyk.m  select_max_connexe_8.m  test.m  treshold.m  treshold_repo.m
test/: Segmenteur.py  comparator.py  erreur_grume.py  resize.py  test_DGtal.cpp  tresholder_fold.py
(+16 files in other folders)
